--- a/pom.xml
+++ b/pom.xml
@@ -26,20 +26,20 @@
             <groupId>org.slf4j</groupId>
             <artifactId>log4j-over-slf4j</artifactId>
             <version>1.7.10</version>
-            <scope>provided</scope>
+            <scope>${scope}</scope>
         </dependency>
         <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <version>1.0.13</version>
-            <scope>provided</scope>
+            <scope>${scope}</scope>
         </dependency>
-        <dependency>
+<!--        <dependency>
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-log4j12</artifactId>
             <version>1.7.5</version>
-            <scope>provided</scope>
-        </dependency>
+            <scope>${scope}</scope>
+        </dependency>-->
         <!--log end-->
         <dependency>
             <groupId>com.alibaba</groupId>
@@ -67,7 +67,7 @@
             <artifactId>jstorm-core</artifactId>
             <version>2.1.1</version>
             <!-- 跑Jstorm本地测试时，请将provided屏蔽，提交到jstorm集群的时候，记得加上provided-->
-            <scope>provided</scope>
+            <scope>${scope}</scope>
             <exclusions>
                 <exclusion>
                     <groupId>org.slf4j</groupId>
@@ -85,7 +85,38 @@
                     <artifactId>maven-core</artifactId>
                     <groupId>org.apache.maven</groupId>
                 </exclusion>
+                <exclusion>
+                    <groupId>com.twitter</groupId>
+                    <artifactId>carbonite</artifactId>
+                </exclusion>
             </exclusions>
+        </dependency>
+
+        <!-- 分库分表插件 -->
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>carbonite</artifactId>
+            <version>1.4.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/lib/carbonite-1.4.0.jar</systemPath>
+        </dependency>
+
+        <dependency>
+            <groupId>com.esotericsoftware.kryo</groupId>
+            <artifactId>kryo</artifactId>
+            <version>2.24.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.clojure</groupId>
+            <artifactId>clojure</artifactId>
+            <version>1.8.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>com.twitter</groupId>
+            <artifactId>chill-java</artifactId>
+            <version>0.9.2</version>
         </dependency>
 
         <!-- kafka -->
@@ -120,14 +151,51 @@
         </dependency>
 
     </dependencies>
+
+
+    <profiles>
+        <profile>
+            <id>local</id>
+            <properties>
+                <scope>compile</scope>
+                <env>local</env>
+            </properties>
+            <!-- 如果不指定ID，默认是本地环境-->
+            <activation>
+                <activeByDefault>true</activeByDefault>
+            </activation>
+        </profile>
+        <profile>
+            <id>testlocal</id>
+            <properties>
+                <env>testlocal</env>
+                <scope>provided</scope>
+            </properties>
+        </profile>
+        <profile>
+            <id>test</id>
+            <properties>
+                <env>test</env>
+                <scope>provided</scope>
+            </properties>
+        </profile>
+        <profile>
+            <id>pro</id>
+            <properties>
+                <scope>provided</scope>
+                <env>pro</env>
+            </properties>
+        </profile>
+    </profiles>
+
     <build>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <configuration>
-                    <source>1.7</source>
-                    <target>1.7</target>
+                    <source>1.8</source>
+                    <target>1.8</target>
                 </configuration>
             </plugin>
             <plugin>
@@ -152,7 +220,7 @@
                                 </transformer>
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.yingjun.stock.topology.StockStategyTopology</mainClass>
+                                    <mainClass>com.quickn.stock.topology.StockStategyTopology</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
